# LOOP

./: .gitignore  AGENTS.md  AGENTS.original.md  AGENTS.subagent-experiment.md  IMPLEMENTER_SPLIT_GUIDE.md  README.md  pyproject.toml  test_support.py
loop/: __init__.py  agent_api.py  ai_launch.py  codex_runtime.py  completion.py  core.py  evaluator_runtime.py  events.py  feedback.py  launch.py  node_table.py  proc.py  rollout.py  router_api.py  run_cmd.py  runtime.py  runtime_noise.py  split_contract.py  store.py
loop_product/: __init__.py  agent_provider.py  ai_launch.py  artifact_hygiene.py  child_supervision_sidecar.py  codex_home.py  control_intent.py  evaluator_authority.py  host_child_launch.py  host_child_launch_supervisor.py  host_child_runtime_status.py  local_input_discovery.py  run_cmd.py  runtime_identity.py  runtime_paths.py  state_io.py
scripts/: bootstrap_first_implementer_from_endpoint.sh  check_child_runtime_status.sh  check_state_tree.sh  child_progress_snapshot.sh  find_local_input_candidates.sh  gc_stopped_runs.sh  launch_child_from_result.sh  new_clarification_session_root.sh  persist_clarification_confirmation.sh  persist_clarification_question.sh  print_audit_tail.sh  publish_external_from_result.sh  publish_workspace_artifact_from_handoff.py  publish_workspace_artifact_from_handoff.sh  recover_orphaned_active.sh  routerapi.sh  routerctl.sh  run_evaluator_node_until_terminal.sh  run_host_child_launch_supervisor.sh  smoke.sh  submit_activate_request_from_handoff.py  submit_activate_request_from_handoff.sh  submit_split_request_from_handoff.py  (+2 more)
(+437 files in other folders)
